--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+/src/config
 # dependencies
 /node_modules
 /.pnp
@@ -7,7 +7,7 @@
 
 # testing
 /coverage
-/config
+
 
 # production
 /build
